--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ Server/Robot/log
 Server/Server.VC.db
 Server/Server/webrtc_offer555.sdp
 Server/Server/api_rtc_sdp.sdp
+Server/www/node_modules_old/
