--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ Server/Server.VC.db
 Server/Server/webrtc_offer555.sdp
 Server/Server/api_rtc_sdp.sdp
 Server/www/node_modules_old/
+Server/rtc_publisher/log/20230214161648_rtc_native.log
+Server/rtc_publisher/log/
