--- a/Server/rtc_publisher/rtc_publisher.vcxproj
+++ b/Server/rtc_publisher/rtc_publisher.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="casync_log.cpp" />
     <ClCompile Include="cbase64.cpp" />
     <ClCompile Include="ccapturer_track_source.cpp" />
+    <ClCompile Include="cclient.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
     <ClCompile Include="cdummysetsession_description_observer.cpp" />
     <ClCompile Include="cint2str.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="clog_color.cpp" />
     <ClCompile Include="crtc_publisher.cpp" />
     <ClCompile Include="ctime_api.cpp" />
+    <ClCompile Include="cwebsocket_mgr.cpp" />
     <ClCompile Include="desktop_capture.cc" />
     <ClCompile Include="desktop_capture_source.cc" />
     <ClCompile Include="main.cpp" />
@@ -165,6 +167,7 @@
     <ClInclude Include="casync_log.h" />
     <ClInclude Include="cbase64.h" />
     <ClInclude Include="ccapturer_track_source.h" />
+    <ClInclude Include="cclient.h" />
     <ClInclude Include="cdigit2str.h" />
     <ClInclude Include="cdummysetsession_description_observer.h" />
     <ClInclude Include="cint2str.h" />
@@ -175,6 +178,7 @@
     <ClInclude Include="csingleton.h" />
     <ClInclude Include="ctime_api.h" />
     <ClInclude Include="ctime_const.h" />
+    <ClInclude Include="cwebsocket_mgr.h" />
     <ClInclude Include="desktop_capture.h" />
     <ClInclude Include="desktop_capture_source.h" />
     <ClInclude Include="wsclient.h" />
