--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ Server/Server/webrtc_offer555.sdp
 Server/Server/api_rtc_sdp.sdp
 Server/www/node_modules_old/ 
 Server/rtc_publisher/log/
+Server/www/test/node_modules/*
+/Server/www/test/node_modules
