--- a/Server/www/package.json
+++ b/Server/www/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "chen web server",
   "scripts": {
-    "start": "node server.js"
-	"publish_server": "node publish_server.js"
+    "start": "node server.js",
+    "publish_server": "node publish_server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
