--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ Server/www/test/node_modules/*
 Server/enc_temp_folder/876bc5794ac9cbfafa1ac26d411af93f/crtc_transport.h
 Server/enc_temp_folder/b3d7b36eee8380feb2fa660629e177c/crtc_transport.cpp
 Server/enc_temp_folder/64457183f1aeceb9aaf16f2dc6ec15/RtpPacket.cpp
+Server/enc_temp_folder/3c5679c976813e4b8b5fdaf75159757/cmedia_desc.cpp
+Server/enc_temp_folder/59414cc9555af86caf647bcac22d28a/capi_rtc_player.cpp
