[根据客户端的payloadtype 发送rtp的 ssrc和payloadtype的值]

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ Server/enc_temp_folder/b3d7b36eee8380feb2fa660629e177c/crtc_transport.cpp
 Server/enc_temp_folder/64457183f1aeceb9aaf16f2dc6ec15/RtpPacket.cpp
 Server/enc_temp_folder/3c5679c976813e4b8b5fdaf75159757/cmedia_desc.cpp
 Server/enc_temp_folder/59414cc9555af86caf647bcac22d28a/capi_rtc_player.cpp
+Server/enc_temp_folder/2872ac409d629a50ec53b92c62401891/crtc_transport.cpp
