--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,7 @@ Server/enc_temp_folder/64457183f1aeceb9aaf16f2dc6ec15/RtpPacket.cpp
 Server/enc_temp_folder/3c5679c976813e4b8b5fdaf75159757/cmedia_desc.cpp
 Server/enc_temp_folder/59414cc9555af86caf647bcac22d28a/capi_rtc_player.cpp
 Server/enc_temp_folder/2872ac409d629a50ec53b92c62401891/crtc_transport.cpp
+Server/enc_temp_folder/d1474b4781cf668bd5aee6ff1c15e72b/desktop_capture_source.cc
+Server/Server/rtp.core.522.yuv
+Server/enc_temp_folder/2ce1140d68f1b9e5f359369551e2c4/crtp_stream_recv.h
+Server/Server/rtp.core.522.*
