--- a/Server/Robot/Robot.vcxproj.filters
+++ b/Server/Robot/Robot.vcxproj.filters
@@ -13,6 +13,15 @@
     <Filter Include="publisher">
       <UniqueIdentifier>{13586067-d83b-4c37-9263-f7f6f16f9026}</UniqueIdentifier>
     </Filter>
+    <Filter Include="NvCodec">
+      <UniqueIdentifier>{41980314-150c-4b04-9ce9-ce1d8fbd2b90}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NvCodec\Utils">
+      <UniqueIdentifier>{6408a6a3-c90a-4e42-9c15-a24ed3ddc872}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NvCodec\NvEncoder">
+      <UniqueIdentifier>{de6ddea0-73a1-4899-8852-58236aa8b2cd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cmsg_base_id.h">
@@ -79,6 +88,42 @@
     <ClInclude Include="crtc_publisher.h">
       <Filter>publisher</Filter>
     </ClInclude>
+    <ClInclude Include="NvCodec\encoder_info.h">
+      <Filter>NvCodec</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\nv_encoder.h">
+      <Filter>NvCodec</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\nvenc.h">
+      <Filter>NvCodec</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\Utils\AppEncUtils.h">
+      <Filter>NvCodec\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\Utils\Logger.h">
+      <Filter>NvCodec\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\Utils\NvCodecUtils.h">
+      <Filter>NvCodec\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\Utils\NvEncoderCLIOptions.h">
+      <Filter>NvCodec\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\NvEncoder\nvEncodeAPI.h">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\NvEncoder\NvEncoder.h">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\NvEncoder\NvEncoderCuda.h">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\NvEncoder\NvEncoderD3D9.h">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClInclude>
+    <ClInclude Include="NvCodec\NvEncoder\NvEncoderD3D11.h">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cmsg_dispatch.cpp">
@@ -136,6 +181,24 @@
     <ClCompile Include="crtc_publisher.cpp">
       <Filter>publisher</Filter>
     </ClCompile>
+    <ClCompile Include="NvCodec\nv_encoder.cc">
+      <Filter>NvCodec</Filter>
+    </ClCompile>
+    <ClCompile Include="NvCodec\nvenc.cpp">
+      <Filter>NvCodec</Filter>
+    </ClCompile>
+    <ClCompile Include="NvCodec\NvEncoder\NvEncoder.cpp">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClCompile>
+    <ClCompile Include="NvCodec\NvEncoder\NvEncoderCuda.cpp">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClCompile>
+    <ClCompile Include="NvCodec\NvEncoder\NvEncoderD3D9.cpp">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClCompile>
+    <ClCompile Include="NvCodec\NvEncoder\NvEncoderD3D11.cpp">
+      <Filter>NvCodec\NvEncoder</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
@@ -144,5 +207,14 @@
     <None Include="build_version.bat" />
     <None Include="client.cfg" />
     <None Include="cow.ive" />
+    <None Include="NvCodec\Utils\BitDepth.cu">
+      <Filter>NvCodec\Utils</Filter>
+    </None>
+    <None Include="NvCodec\Utils\ColorSpace.cu">
+      <Filter>NvCodec\Utils</Filter>
+    </None>
+    <None Include="NvCodec\Utils\Resize.cu">
+      <Filter>NvCodec\Utils</Filter>
+    </None>
   </ItemGroup>
 </Project>
