--- a/Server/Robot/client.cfg
+++ b/Server/Robot/client.cfg
@@ -5,7 +5,7 @@
 #mediasoup_websocket_port=8888
  room_name=chensong666
  client_name=chensong666
-video_fps=30
+video_fps=60
 desktop_capture = 2
 
-log_level = 34
+#log_level = 34
