--- a/Server/Robot/client.cfg
+++ b/Server/Robot/client.cfg
@@ -3,8 +3,8 @@
 #mediasoup_ip=192.168.1.51
 #mediasoup_http_port=8888
 #mediasoup_websocket_port=8888
- room_name=chensong666
- client_name=chensong666
+ room_name=chensong
+ client_name=chensong
 video_fps=60
 desktop_capture = 2
 
