--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -77,7 +77,7 @@
     <IncludePath>$(C_INCLUDE)\protobuf\include;$(C_INCLUDE)\libsrtp2\include;$(C_INCLUDE)\abseil-cpp\include;$(C_INCLUDE)\json\include;$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\boost_1_66_0\include;$(C_INCLUDE)\openssl_1.1.0\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(C_INCLUDE)\protobuf\lib\x64\debug;$(C_INCLUDE)\libsrtp2\lib\x64\debug;$(C_INCLUDE)\abseil-cpp\lib\x64\debug;$(C_INCLUDE)\json\lib\x64\debug;$(C_INCLUDE)\openssl_1.1.0\lib\x64\debug;$(C_INCLUDE)\boost_1_66_0\lib;$(C_INCLUDE)\libuv\lib\x64\Debug;$(C_INCLUDE)\usrsctplib\lib\x64\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
-    <TargetName>$(ProjectName)</TargetName>
+    <TargetName>$(ProjectName)1</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>..\vsout\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
@@ -205,8 +205,10 @@
     <ClCompile Include="crtc_transport.cpp" />
     <ClCompile Include="crtc_user_config.cpp" />
     <ClCompile Include="crtp_rtcp.cpp" />
+    <ClCompile Include="crtp_stream_recv.cpp" />
     <ClCompile Include="crtx_paylod_des.cpp" />
     <ClCompile Include="csdp_util.cpp" />
+    <ClCompile Include="cseq_manager.cpp" />
     <ClCompile Include="csocket_util.cpp" />
     <ClCompile Include="csrtp.cpp" />
     <ClCompile Include="csrtp_session.cpp" />
@@ -397,8 +399,10 @@
     <ClInclude Include="crtc_user_config.h" />
     <ClInclude Include="crtp_rtcp.h" />
     <ClInclude Include="crtp_rtcp_define.h" />
+    <ClInclude Include="crtp_stream_recv.h" />
     <ClInclude Include="crtx_paylod_des.h" />
     <ClInclude Include="csdp_util.h" />
+    <ClInclude Include="cseq_manager.h" />
     <ClInclude Include="cshare_proto_error.h" />
     <ClInclude Include="csocket_util.h" />
     <ClInclude Include="csrtp.h" />
