--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="cmsg_dispatch.cpp" />
     <ClCompile Include="cnetwork.cpp" />
     <ClCompile Include="cnet_adapter_test.cpp" />
+    <ClCompile Include="Consumer.cpp" />
     <ClCompile Include="cortc.cpp" />
     <ClCompile Include="crandom.cpp" />
     <ClCompile Include="crate_calculator.cpp" />
@@ -240,6 +241,7 @@
     <ClCompile Include="h264_profile_level_id.cc" />
     <ClCompile Include="IceCandidate.cpp" />
     <ClCompile Include="IceServer.cpp" />
+    <ClCompile Include="KeyFrameRequestManager.cpp" />
     <ClCompile Include="libwebrtc\api\network_state_predictor.cc" />
     <ClCompile Include="libwebrtc\api\transport\bitrate_settings.cc" />
     <ClCompile Include="libwebrtc\api\transport\field_trial_based_config.cc" />
@@ -286,8 +288,10 @@
     <ClCompile Include="libwebrtc\system_wrappers\source\field_trial.cc" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Media.cpp" />
+    <ClCompile Include="NackGenerator.cpp" />
     <ClCompile Include="Parameters.cpp" />
     <ClCompile Include="PortManager.cpp" />
+    <ClCompile Include="Producer.cpp" />
     <ClCompile Include="RtcpFeedback.cpp" />
     <ClCompile Include="RtcpParameters.cpp" />
     <ClCompile Include="rtcp\Bye.cpp" />
@@ -327,6 +331,10 @@
     <ClCompile Include="RtpParameters.cpp" />
     <ClCompile Include="RtpProbationGenerator.cpp" />
     <ClCompile Include="RtpRtxParameters.cpp" />
+    <ClCompile Include="RtpStream.cpp" />
+    <ClCompile Include="RtpStreamRecv.cpp" />
+    <ClCompile Include="RtpStreamSend.cpp" />
+    <ClCompile Include="RtxStream.cpp" />
     <ClCompile Include="SeqManager.cpp" />
     <ClCompile Include="StunPacket.cpp" />
     <ClCompile Include="TransportCongestionControlServer.cpp" />
@@ -372,6 +380,7 @@
     <ClInclude Include="cnet_adapter_test.h" />
     <ClInclude Include="cnet_define.h" />
     <ClInclude Include="common_types.h" />
+    <ClInclude Include="Consumer.hpp" />
     <ClInclude Include="cortc.h" />
     <ClInclude Include="crandom.h" />
     <ClInclude Include="crate_calculator.h" />
@@ -439,6 +448,7 @@
     <ClInclude Include="h264_profile_level_id.h" />
     <ClInclude Include="IceCandidate.hpp" />
     <ClInclude Include="IceServer.hpp" />
+    <ClInclude Include="KeyFrameRequestManager.hpp" />
     <ClInclude Include="libwebrtc\api\bitrate_constraints.h" />
     <ClInclude Include="libwebrtc\api\network_state_predictor.h" />
     <ClInclude Include="libwebrtc\api\transport\bitrate_settings.h" />
@@ -503,9 +513,11 @@
     <ClInclude Include="libwebrtc\rtc_base\units\unit_base.h" />
     <ClInclude Include="libwebrtc\system_wrappers\source\field_trial.h" />
     <ClInclude Include="cnetwork_constants.h" />
+    <ClInclude Include="NackGenerator.hpp" />
     <ClInclude Include="Parameters.hpp" />
     <ClInclude Include="PayloadDescriptorHandler.hpp" />
     <ClInclude Include="PortManager.hpp" />
+    <ClInclude Include="Producer.hpp" />
     <ClInclude Include="rtcp\Bye.hpp" />
     <ClInclude Include="rtcp\CompoundPacket.hpp" />
     <ClInclude Include="rtcp\Feedback.hpp" />
@@ -538,6 +550,10 @@
     <ClInclude Include="RtpHeaderExtensionIds.hpp" />
     <ClInclude Include="RtpPacket.hpp" />
     <ClInclude Include="RtpProbationGenerator.hpp" />
+    <ClInclude Include="RtpStream.hpp" />
+    <ClInclude Include="RtpStreamRecv.hpp" />
+    <ClInclude Include="RtpStreamSend.hpp" />
+    <ClInclude Include="RtxStream.hpp" />
     <ClInclude Include="SeqManager.hpp" />
     <ClInclude Include="StunPacket.hpp" />
     <ClInclude Include="Tools.hpp" />
