--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="cnet_adapter_test.cpp" />
     <ClCompile Include="Consumer.cpp" />
     <ClCompile Include="cortc.cpp" />
+    <ClCompile Include="crtc_producer.cpp" />
     <ClCompile Include="crandom.cpp" />
     <ClCompile Include="crate_calculator.cpp" />
     <ClCompile Include="cred_payload.cpp" />
@@ -205,6 +206,7 @@
     <ClCompile Include="crtc_track_description.cpp" />
     <ClCompile Include="crtc_transport.cpp" />
     <ClCompile Include="crtc_user_config.cpp" />
+    <ClCompile Include="crtp_listener.cpp" />
     <ClCompile Include="crtp_rtcp.cpp" />
     <ClCompile Include="crtp_stream_recv.cpp" />
     <ClCompile Include="crtx_paylod_des.cpp" />
@@ -382,6 +384,7 @@
     <ClInclude Include="common_types.h" />
     <ClInclude Include="Consumer.hpp" />
     <ClInclude Include="cortc.h" />
+    <ClInclude Include="crtc_producer.h" />
     <ClInclude Include="crandom.h" />
     <ClInclude Include="crate_calculator.h" />
     <ClInclude Include="cred_payload.h" />
@@ -406,6 +409,7 @@
     <ClInclude Include="crtc_transport.h" />
     <ClInclude Include="crtc_transport_define.h" />
     <ClInclude Include="crtc_user_config.h" />
+    <ClInclude Include="crtp_listener.h" />
     <ClInclude Include="crtp_rtcp.h" />
     <ClInclude Include="crtp_rtcp_define.h" />
     <ClInclude Include="crtp_stream_recv.h" />
